--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3-template-solana",
+  "name": "invariant-eclipse-webapp",
   "author": "Wojciech Cichocki",
   "version": "0.1.0",
   "homepage": ".",
