--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-spring": "^9.7.3",
     "react-window": "^1.8.10",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "remeda": "^1.61.0",
     "tss-react": "^4.9.6",
