--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc && vite build",
     "watch": "vite build --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "fix-lint": "eslint --fix src",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "export NODE_OPTIONS=--max-old-space-size=8192 && storybook build",
