--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -28,3 +28,6 @@ lint:
     - svgo@3.3.2
     - trufflehog@3.82.2
     - yamllint@1.35.1
+    - 'node_modules/**'
+    - 'src/components/**/*.stories.tsx'
+    - 'src/pages/SolanaCreator/**/*'
