--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "noImplicitAny": false
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/pages/SolanaCreator"],
+  "exclude": ["node_modules", "src/pages/SolanaCreator", "**/*.stories.ts", "**/*.stories.tsx"],
   "references": [
     {
       "path": "./tsconfig.node.json"
