--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,4 +1,4 @@
-t pu# This file controls the behavior of Trunk: https://docs.trunk.io/cli
+# This file controls the behavior of Trunk: https://docs.trunk.io/cli
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
@@ -28,6 +28,7 @@ lint:
     - svgo@3.3.2
     - trufflehog@3.82.2
     - yamllint@1.35.1
+  disabled:
     - 'node_modules/**'
     - 'src/components/**/*.stories.tsx'
     - 'src/pages/SolanaCreator/**/*'
