--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@invariant-labs/sdk-eclipse": "^0.0.20",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@irys/web-upload": "^0.0.13",
+    "@irys/web-upload-solana": "^0.1.6",
     "@nightlylabs/wallet-selector-solana": "^0.3.1",
     "@nivo/bar": "^0.87.0",
     "@nivo/line": "^0.86.0",
