--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rc-scrollbars": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
