--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@storybook/addon-onboarding": "^8.1.10",
     "@storybook/addon-themes": "^8.1.10",
     "@storybook/addon-viewport": "^8.1.10",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "@storybook/blocks": "^8.1.10",
     "@storybook/react": "^8.1.10",
     "@storybook/react-vite": "^8.1.10",
@@ -103,7 +104,46 @@
       "last 1 safari version"
     ]
   },
-  "overrides": {
-    "rpc-websockets": "7.11.0"
+  "devDependencies": {
+    "@hookform/error-message": "^0.0.3",
+    "@hookform/resolvers": "^0.1.0",
+    "@rollup/plugin-inject": "^4.0.4",
+    "@storybook/addon-actions": "6.4.0",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-knobs": "^6.2.9",
+    "@storybook/addon-storysource": "6.4.0",
+    "@storybook/addon-viewport": "6.4.0",
+    "@storybook/addons": "6.4.0",
+    "@storybook/builder-webpack5": "6.4.0",
+    "@storybook/manager-webpack5": "6.4.0",
+    "@storybook/preset-create-react-app": "^4.0.0",
+    "@storybook/react": "6.4.0",
+    "@storybook/theming": "6.4.0",
+    "@types/bs58": "^4.0.1",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^16.9.44",
+    "@types/react-copy-to-clipboard": "^5.0.0",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@types/react-native": "^0.62.0",
+    "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-native": "^5.1.0",
+    "@types/react-test-renderer": "16.9.2",
+    "@types/react-window": "^1.8.5",
+    "@types/redux-actions": "^2.6.1",
+    "@types/redux-saga": "^0.10.5",
+    "@types/storybook__addon-knobs": "^5.2.1",
+    "@types/storybook__react": "^5.2.1",
+    "@types/yup": "^0.29.3",
+    "cross-env": "^7.0.3",
+    "dotenv-webpack": "^7.0.3",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "prettier": "^2.1.0",
+    "prettier-config-standard": "^1.0.1",
+    "react-app-rewired": "^2.1.6",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
+    "vite-aliases": "^0.8.2"
   }
 }
