fix dependencies error

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@solana/spl-token": "0.1.8",
     "@solana/spl-token-registry": "^0.2.55",
-    "@solana/web3.js": "1.87.6",
+    "@solana/web3.js": "^1.95.3",
     "@storybook/addon-actions": "^8.1.10",
     "assert": "^2.1.0",
     "axios": "^1.6.8",
@@ -103,8 +103,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "overrides": {
-    "rpc-websockets": "7.11.0"
   }
 }
