Changed permissions in the the workflow

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,8 +1,8 @@
 name: deploy master
 
 permissions:
-  contents: write
-  deployments: write
+  pull-requests: read
+  statuses: write
 
 on:
   push:
