--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@solana/spl-token-registry": "^0.2.55",
     "@solana/web3.js": "^1.95.3",
     "@storybook/addon-actions": "^8.1.10",
+    "@types/react-slick": "^0.23.13",
     "assert": "^2.1.0",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
@@ -47,12 +48,14 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
     "react-window": "^1.8.10",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "remeda": "^1.61.0",
+    "slick-carousel": "^1.8.1",
     "tss-react": "^4.9.6",
     "typed-redux-saga": "^1.5.0",
     "vite-plugin-top-level-await": "^1.4.1",
