--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.22.3",
     "@nightlylabs/wallet-selector-solana": "^0.3.1",
     "@nivo/bar": "^0.87.0",
     "@nivo/line": "^0.86.0",
+    "@nivo/pie": "^0.88.0",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@reduxjs/toolkit": "^2.2.3",
     "@solana/spl-token": "^0.4.9",
@@ -50,6 +52,7 @@
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
     "react-window": "^1.8.10",
+    "recharts": "^2.13.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
