--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@coral-xyz/anchor": "^0.29.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@esbuild/win32-x64": "^0.24.0",
     "@invariant-labs/locker-eclipse-sdk": "^0.0.13",
     "@invariant-labs/sdk-eclipse": "^0.0.50",
     "@irys/web-upload": "^0.0.14",
@@ -32,9 +33,9 @@
     "@nightlylabs/wallet-selector-solana": "^0.3.1",
     "@nivo/bar": "^0.87.0",
     "@nivo/line": "^0.86.0",
-    "@nivo/pie": "^0.88.0",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@reduxjs/toolkit": "^2.2.3",
+    "@rollup/rollup-win32-x64-msvc": "^4.28.0",
     "@solana/spl-token": "^0.4.9",
     "@solana/spl-token-registry": "^0.2.55",
     "@solana/web3.js": "^1.95.4",
