--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "storybook-addon-remix-react-router": "^3.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
-    "vite": "^5.2.0",
+    "vite": "5.2.0",
     "vite-plugin-compression2": "^1.1.1",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-wasm": "^3.3.0",
