--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@invariant-labs/locker-eclipse-sdk": "^0.0.20",
     "@invariant-labs/points-sdk": "^0.0.3",
     "@invariant-labs/sdk-eclipse": "^0.0.63",
-    "@irys/web-upload": "0.0.14",
-    "@irys/web-upload-solana": "0.1.7",
+    "@irys/web-upload": "*",
+    "@irys/web-upload-solana": "^0.1.7",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@mui/icons-material": "^5.15.15",
