Implement trasaction route and InvariantAgregator

--- a/package.json
+++ b/package.json
@@ -44,16 +44,19 @@
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "classnames": "^2.5.1",
+    "mermaid": "^11.4.1",
     "notistack": "^3.0.1",
     "rc-scrollbars": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flow": "^1.0.3",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
     "react-window": "^1.8.10",
+    "reactflow": "^11.11.4",
     "recharts": "^2.13.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
