--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
+  build-app:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,20 +15,66 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - name: install
-        run: npm i
-      - name: build
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build application
         run: npm run build
 
-  upload:
+  build-storybook:
     runs-on: ubuntu-latest
-    permissions: write-all
+    needs: build-app
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Storybook
+        run: npm run build-storybook
+
+  deploy-app:
+    runs-on: ubuntu-latest
+    needs: build-app
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Install Vercel CLI
         run: npm install -g vercel@22.0.1
-      - name: Deploy to Vercel Action
+
+      - name: Deploy to Vercel Action (App)
+        uses: BetaHuhn/deploy-to-vercel-action@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_STORYBOOK }}
+          PRODUCTION: false
+
+  deploy-storybook:
+    runs-on: ubuntu-latest
+    needs: build-storybook
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Vercel CLI
+        run: npm install -g vercel@22.0.1
+
+      - name: Deploy to Vercel Action (Storybook)
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
