--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,4 +1,4 @@
-name: preview
+name: Preview App
 
 on:
   pull_request:
@@ -15,20 +15,37 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - name: install
+
+      - name: Install dependencies
         run: npm i
-      - name: build
+
+      - name: Build
         run: npm run build
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-dist
+          path: dist
 
   upload:
     runs-on: ubuntu-latest
-    permissions: write-all
+    needs: build
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: app-dist
+
       - name: Install Vercel CLI
         run: npm install -g vercel@22.0.1
-      - name: Deploy to Vercel Action
+
+      - name: Deploy to Vercel (App)
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,4 +53,5 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          DIRECTORY: app-dist
           PRODUCTION: false
