--- a/.github/workflows/preview-storybook.yml
+++ b/.github/workflows/preview-storybook.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build-storybook:
+  build-and-deploy-storybook:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,35 +17,15 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: Build Storybook
         run: npm run build-storybook
 
-      - name: Upload Storybook Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: storybook-static
-          path: storybook-static
-
-  upload-storybook:
-    runs-on: ubuntu-latest
-    needs: build-storybook
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download Storybook Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: storybook-static
-
       - name: Install Vercel CLI
         run: npm install -g vercel@22.0.1
 
-      - name: Deploy to Vercel (Storybook)
+      - name: Deploy Storybook to Vercel
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
