--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -34,6 +34,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          PRODUCTION: false
+          VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
+          PRODUCTION: 'false'
+          WORKING_DIRECTORY: 'storybook-static'
+          PREBUILT: 'true'
