--- a/.github/workflows/preview-storybook.yml
+++ b/.github/workflows/preview-storybook.yml
@@ -64,5 +64,5 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_STORYBOOK_PROJECT_ID }}
           VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
           PRODUCTION: 'false'
-          WORKING_DIRECTORY: 'storybook-static'
+          WORKING_DIRECTORY: '.vercel/output'
           PREBUILT: 'true'
