--- a/.github/workflows/preview-storybook.yml
+++ b/.github/workflows/preview-storybook.yml
@@ -54,5 +54,5 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
           PRODUCTION: false
+          COMMENT_IDENTIFIER: 'vercel-storybook'
           WORKING_DIRECTORY: 'storybook-static'
-          GITHUB_DEPLOYMENT_ENV: 'storybook'
