--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -36,5 +36,5 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          COMMENT_IDENTIFIER: 'vercel-app'
+          GITHUB_DEPLOYMENT_ENV: 'app'
           PRODUCTION: false
