Add support for lookup tables

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "slick-carousel": "^1.8.1",
     "tss-react": "^4.9.6",
     "typed-redux-saga": "^1.5.0",
+    "tweetnacl": "^1.0.3",
     "vite-plugin-top-level-await": "^1.4.1",
     "vite-plugin-wasm": "^3.3.0"
   },
