--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@invariant-labs/locker-eclipse-sdk": "^0.0.22",
     "@invariant-labs/points-sdk": "^0.0.5",
     "@invariant-labs/sdk-eclipse": "^0.0.118",
@@ -29,10 +27,10 @@
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
-    "@mui/x-charts": "^7.22.3",
     "@nightlylabs/wallet-selector-solana": "^0.3.14",
-    "@nivo/bar": "^0.87.0",
+    "@nivo/bar": "^0.86.0",
     "@nivo/line": "^0.86.0",
+    "@nivo/pie": "^0.86.0",
     "@project-serum/sol-wallet-adapter": "^0.2.5",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.2.3",
@@ -40,7 +38,6 @@
     "@solana/spl-token-registry": "^0.2.55",
     "@solana/web3.js": "^1.95.4",
     "@storybook/addon-actions": "^8.1.10",
-    "@types/react-slick": "^0.23.13",
     "assert": "^2.1.0",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
@@ -54,7 +51,6 @@
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-window": "^1.8.10",
-    "recharts": "^2.13.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
