--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.11.5",
     "@invariant-labs/locker-eclipse-sdk": "^0.0.22",
     "@invariant-labs/points-sdk": "^0.0.5",
+    "@invariant-labs/sale-sdk": "^0.0.6",
     "@invariant-labs/sdk-eclipse": "^0.0.118",
     "@irys/web-upload": "*",
     "@irys/web-upload-solana": "^0.1.7",
