--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -36,4 +36,5 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_SCOPE: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          NODE_ENV: 'development'
           PRODUCTION: false
