--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.5",
     "@invariant-labs/locker-eclipse-sdk": "^0.0.23",
     "@invariant-labs/points-sdk": "^0.0.5",
+    "@invariant-labs/sale-sdk": "^0.0.17",
     "@invariant-labs/sdk-eclipse": "^0.0.122",
     "@irys/web-upload": "*",
     "@irys/web-upload-solana": "^0.1.7",
