--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "update-mainnet-list": "node ./src/fetchMainnetList.js"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@coral-xyz/anchor": "^0.29.0",
     "@invariant-labs/locker-eclipse-sdk": "^0.0.23",
     "@invariant-labs/points-sdk": "^0.0.5",
     "@invariant-labs/sdk-eclipse": "^0.0.124",
     "@irys/web-upload": "*",
     "@irys/web-upload-solana": "^0.1.7",
-    "@metaplex-foundation/js": "^0.20.1",
-    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
+    "@metaplex-foundation/mpl-toolbox": "^0.9.4",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi-eddsa-web3js": "^0.9.2",
+    "@metaplex-foundation/umi-public-keys": "^0.8.9",
+    "@metaplex-foundation/umi-web3js-adapters": "^0.9.2",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@nightlylabs/wallet-selector-solana": "^0.3.14",
