--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "update-mainnet-list": "node ./src/fetchMainnetList.js"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@coral-xyz/anchor": "^0.29.0",
     "@invariant-labs/locker-eclipse-sdk": "^0.0.23",
     "@invariant-labs/points-sdk": "^0.0.5",
     "@invariant-labs/sdk-eclipse": "^0.0.124",
@@ -43,6 +43,7 @@
     "rc-scrollbars": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fitty": "^1.0.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
