--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "assert": "^2.1.0",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
+    "lightweight-charts": "^5.0.7",
     "notistack": "^3.0.1",
     "rc-scrollbars": "^1.1.6",
     "react": "^18.2.0",
